[package]
name = "sdl2-experiments"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]

[dependencies]
find_folder = "0.3.0"
rand = "0.8.4"
image = "0.23.14"
