[package]
name = "pandamonium"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dependencies]
find_folder = "0.3.0"
derivative = "2.2.0"
image = "0.23.14"
tiled = "0.12.1"
component-derive = { path = "../component-derive" }
entity = { path = "../entity" }
engine = { path = "../engine" }
